# pqEDMDp

./: .gitignore  LICENSE  README.md  clean_samples.py  db_from_inputs.py  db_import_from_csv.py  decompositions.py  main_beware.py  orthogonalization.py  pqEDMD.py  pqObservable.py  py_diagram  pyproject.toml  read_and_clean_RawData.py
examples/: README.md  environment.py  forced_duffing.py
examples/Duffing/: forced_duffing.py
examples/Duffing/Forced_deterministic/: pqDec_forced_det_step.py  sidDec_forced_det_cos.py  sidDec_forced_det_step.py  svdDec_forced_det_cos.py  svdDec_forced_det_step.py
examples/Temperature/: README.md  sidDec_TcLab.py  svdDec_TcLab.py
old_data_management/: clean_samples.py  data_loader.py  db_from_inputs.py  read_and_clean_RawData.py
pqEDMDpy/: README.md  pyproject.toml
pqEDMDpy/examples/: environment.py  forced_duffing.py
pqEDMDpy/examples/Duffing/: Duffing.py  README.md  forced_duffing.py
pqEDMDpy/examples/Reactor/: a_phase_plane.py
pqEDMDpy/examples/Temperature/: tclab.py
pqEDMDpy/pqedmdpy/: decompositions.py  oldD.py  pqEDMD.py  pqEDMDp.py  pqObservable.py
pqEDMDpy/pqedmdpy/decompositions/: decomposition.py  pqdecomposition.py  siddecomposition.py  sidolsdecomposition.py  svddecomposition.py
pqedmdpy/: pqEDMDp.py  pqObservable.py
pqedmdpy/decompositions/: pqdecomposition.py  siddecomposition.py  svddecomposition.py
source/: __init__.py  decompositions.py  pqEDMD.py  pqObservable.py
src/: pqedmdp.py  pqobservable.py
src/decompositions/: pqdecomposition.py  siddecomposition.py  svddecomposition.py
(+9 files in other folders)
