[tool.poetry]
name = "pqedmdpy"
version = "0.1.0"
description = ""
authors = ["cgarcia <cgarcia@carmeuse.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
