[tool.poetry]
name = "pqedmdpy"
version = "0.1.0"
description = ""
authors = ["cgarcia <cgarcia@carmeuse.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.11"
pandas = "^2.2"
matplotlib = "^3.8"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
